[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=1]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=6]
[ext_resource path="res://scripts/Player.gd" type="Script" id=7]
[ext_resource path="res://assets/fundo.png" type="Texture" id=8]
[ext_resource path="res://scenes/Cano.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Generator.gd" type="Script" id=10]
[ext_resource path="res://scripts/Game.gd" type="Script" id=11]
[ext_resource path="res://assets/game_font.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/sounds/somHit.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/somScore.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/somVoa.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "BackgroundAnimation"
length = 3.0
loop = true
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundAnimation/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundAnimation/Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 90.0462

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 1000.66, 0.718506 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 1006.43, -0.000488281 )

[node name="GameNode" type="Node2D"]
script = ExtResource( 11 )

[node name="BackgroundAnimation" type="AnimationPlayer" parent="."]
autoplay = "BackgroundAnimation"
anims/BackgroundAnimation = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="BackgroundAnimation"]
scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite2" type="Sprite" parent="BackgroundAnimation"]
position = Vector2( 1026, 0 )
scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 8 )
centered = false

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 490.123, 402.746 )
z_index = 1
mode = 2
gravity_scale = 18.0
script = ExtResource( 7 )

[node name="PersonagemAnimation" type="AnimatedSprite" parent="Player"]
position = Vector2( -2707.57, 1742.82 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 2 )
frame = 5
playing = true
offset = Vector2( 1919.35, -1242.68 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 11.6289, -4.15433 )
shape = SubResource( 3 )

[node name="FlySound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 15 )

[node name="ScreenLimits" type="StaticBody2D" parent="."]

[node name="LimiteTop" type="CollisionShape2D" parent="ScreenLimits"]
shape = SubResource( 4 )

[node name="LimiteBottom" type="CollisionShape2D" parent="ScreenLimits"]
position = Vector2( 0, 1699.79 )
shape = SubResource( 5 )

[node name="Pipes" type="Node2D" parent="."]
z_index = 2

[node name="Pipe" parent="Pipes" instance=ExtResource( 9 )]
position = Vector2( 1125.71, 667.508 )
script = null

[node name="Generator" type="Position2D" parent="Pipes"]
position = Vector2( 1128.76, 668.54 )
z_index = 2
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Pipes/Generator"]
wait_time = 3.0
autostart = true

[node name="TimeToReplay" type="Timer" parent="."]
wait_time = 3.0

[node name="Score" type="Node2D" parent="."]
z_index = 3

[node name="Control" type="Control" parent="Score"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="Score/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 77.3455
margin_top = 40.433
margin_right = 926.345
margin_bottom = 118.433
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
[connection signal="timeout" from="Pipes/Generator/Timer" to="Pipes/Generator" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimeToReplay" to="." method="_on_TimeToReplay_timeout"]
